Prevent cornerable stuff from ever wrapping.

--- a/assets/index.css
+++ b/assets/index.css
@@ -140,6 +140,7 @@ section {
 
 #realms .cornerable {
     font-size: 0.75vw;
+    white-space: nowrap;
 }
 
 #realms #all {
